# prepforinsta

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
prepforinsta/: __init__.py  cli.py  processor.py
