[tool.poetry]
name = "prepforinsta"
version = "0.1.2"
description = "A CLI tool to prepare images for Instagram publishing"
authors = ["Jamie Gardner <jamie@tgo.dev>"]
readme = "README.md"
packages = [{include = "prepforinsta"}]

[tool.poetry.dependencies]
python = "^3.13"
pillow = "^10.1.0"
piexif = "^1.1.3"
click = "^8.1.7"

[tool.poetry.scripts]
prepforinsta = "prepforinsta.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
